maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: '<-' expected but ')' found.
    for(x<0 to getMondeLargeur()-1){
                                  ^JediEscaper:10: error: illegal start of simple expression
  }
  ^